--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .nav_link{
     display:flex;
@@ -10,4 +10,11 @@
   }
   .header{
       display: flex;
+  } */
+
+  .bg-myColor{
+      background-color:rgb(189, 231, 199);
+  }
+  .nav_link CustomLink{
+      padding-left: 30px;
   }
