--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -18,12 +18,16 @@
     border-radius: 10px !important;
   }
   .card-container {
-    padding-top: 20px !important;
+    padding: 30px 15px !important;
+    text-align: center;
+    margin-top: 20px;
+
   }
   .icon {
     font-size: 25px;
   }
   .star{
       display: flex;
-      color: goldenrod
+      color: goldenrod;
+      justify-content: center;
   }
